[package]
name = "libreplex_liquidity"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/Libreplex/libreplex-program-library"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_liquidity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "libreplex_fair_launch/idl-build"]

[dependencies]
anchor-lang = {version = "~0.29", features = ["init-if-needed"]}
anchor-spl = {version = "~0.29"}
libreplex_fair_launch = {version="0.7.0", features =["cpi", "no-entrypoint"]}
libreplex_shared = {version="0.5.0", features=["no-entrypoint"] }
mpl-token-metadata = { version="~3" }
amm-proxy = {path = "../../utils/mercurial-proxy", features = ["cpi"]}
vault-proxy = {path = "../../utils/vault-proxy", features = ["cpi"]}
solana-program = "~1.17"
solana-address-lookup-table-program = "~1.17"
dyn-fmt = "0.3.0"

[dev-dependencies]
solana-program-test = {version= "~1.17"}
