[package]
name = "amm-proxy"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]

anchor-gen = {path="../../../../anchor/anchor-gen/crates/anchor-gen", version="*"}
anchor-lang = "~0.29"
bytemuck = "1.12.3"